apps/base/metrics-editor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-editor
  namespace: dev
  labels:
    app: metrics-editor
spec:
  selector:
    app: metrics-editor
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3030
